# grpc-videostreamingc-

./: CMakeLists.txt  grpc_client.cpp  grpc_server.cpp  main.cpp
protos/: stream.proto
